# tree-sitter-typescript

./: BUILD.bazel  MODULE.bazel
