cc_library(
    name = "tree-sitter-typescript",
    srcs = ["typescript/src/parser.c",
	    "typescript/src/scanner.c",
	    "typescript/src/scanner.h",
            "typescript/src/tree_sitter/alloc.h",
            "typescript/src/tree_sitter/array.h",
            "typescript/src/tree_sitter/parser.h"],
    hdrs = ["bindings/c/tree-sitter-typescript.h"],
    visibility = ["//visibility:public"]
)
